Run wasm & Build android

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,16 @@
 {
     "[rust]": {
         "editor.formatOnSave": true        
-    }
+    },
+    "[javascript]": {
+        "editor.formatOnSave": true        
+    },
+    "rust-analyzer.cargo.target": "wasm32",
+    "rust.show_warnings": true,
+    "rust.all_targets": true,
+    "rust.rust-analyzer": {
+        "releaseTag": "nightly"
+    },
+    "rust.all_features": true
+
 }
