--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,46 +1,43 @@
 [package]
-name = "wasm-game-of-life"
+name = "wasm-game-of-life-2"
 version = "0.1.0"
 authors = ["1halfplusminus <sautron.gael@laposte.net>"]
 edition = "2018"
+publish = false
 
 [lib]
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib", "rlib","dylib"]
+path= "src/main.rs"
 
-[features]
-default = []
-metal = ["gfx-backend-metal"]
-gl = ["gfx-backend-gl"]
-dx11 = ["gfx-backend-dx11"]
-dx12 = ["gfx-backend-dx12"]
-vulkan = ["gfx-backend-vulkan"]
-web_sys= []
-unstable = []
+[[bin]]
+name = "quad"
+path = "src/main.rs"
 
 [dependencies]
 
-winit = { version = "0.24", features = ["web-sys"] }
+winit = { version = "0.24", features=["web-sys"] }
 
-instant = "0.1"
+gfx-hal = {  package = "gfx-hal",version="0.7.0", git = "https://github.com/gfx-rs/gfx"}
 
-glow= "0.8.1"
+auxil = {  package = "gfx-auxil",version="0.8.0", git = "https://github.com/gfx-rs/gfx"}
 
-hal = {  version = "0.7", package = "gfx-hal" }
+serde = { version = "~1.0.115", features = ["derive"] }
 
-auxil = { version = "0.8", package = "gfx-auxil" }
+log=""
 
-gfx-backend-empty = { version = "0.7" }
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+env_logger = "0.8"
 
-#"shaderc = "=0.6.2"
+
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-console_error_panic_hook = { version = "0.1.6"}
-console_log = "0.1.2"
-wee_alloc = { version = "0.4.5", optional = true }
 js-sys = "0.3.49"
+backend = {version = "0.7", git = "https://github.com/gfx-rs/gfx",package = "gfx-backend-gl"}
+wasm-bindgen = "0.2.72"
+console_error_panic_hook = "0.1.6"
+console_log = "0.1.2"
 
-[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
-package="web-sys"
-version = "0.3.4"
+[target.'cfg(target_arch = "wasm32")'.dependencies.web_sys]
+version = "0.3.6"
 features = [
   'Document',
   'Element',
@@ -51,44 +48,30 @@ features = [
   'WebGlShader',
   'Window',
 ]
+package="web-sys"
 
-
-
-[dependencies.gfx-backend-vulkan]
-version = "0.7"
-optional = true
+[target.'cfg(target_os = "android")'.dependencies.backend]
 git = "https://github.com/gfx-rs/gfx"
+version = "0.7"
+package = "gfx-backend-vulkan"
 
-[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
-version = "0.2.45"
-package="wasm-bindgen"
-
-[target.'cfg(all(unix, not(target_os = "ios"), not(target_os = "macos"), not(target_os = "android")))'.dependencies.gfx-backend-gl]
+[target.'cfg(all(unix, not(target_os = "ios"), not(target_os = "macos"), not(target_os = "android")))'.dependencies.backend]
+git = "https://github.com/gfx-rs/gfx"
 version = "0.7"
 features = ["cross"]
-optional = true
-git = "https://github.com/gfx-rs/gfx"
+package = "gfx-backend-gl"
 
-[target.'cfg(all(target_arch = "wasm32"))'.dependencies.gfx-backend-gl]
-version = "0.7"
-optional = true
-git = "https://github.com/gfx-rs/gfx"
-
-[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.gfx-backend-metal]
+[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.backend]
 features = ["cross"]
 version = "=0.7"
-optional = true
 git = "https://github.com/gfx-rs/gfx"
+package="gfx-backend-metal"
 
-[target.'cfg(windows)'.dependencies.gfx-backend-dx11]
-version = "0.7"
-optional = true
-git = "https://github.com/gfx-rs/gfx"
 
-[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
+[target.'cfg(windows)'.dependencies.backend]
 version = "0.7"
-optional = true
 git = "https://github.com/gfx-rs/gfx"
+package="gfx-backend-dx12"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.13"
