--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,2 +1,36 @@
+
 [target.aarch64-linux-android]
-linker = "/usr/lib/android-sdk/ndk-bundle/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android21-clang"
+ar = '/usr/lib/android-sdk/ndk-bundle/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android-ar'
+linker = '/usr/lib/android-sdk/ndk-bundle/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android29-clang'
+rustflags = [
+    '-Clink-arg=-landroid',
+    '-Clink-arg=-llog',
+    '-Clink-arg=-lOpenSLES',
+]
+
+[target.armv7-linux-androideabi]
+ar = '/usr/lib/android-sdk/ndk-bundle/toolchains/llvm/prebuilt/linux-x86_64/bin/arm-linux-androideabi-ar'
+linker = '/usr/lib/android-sdk/ndk-bundle/toolchains/llvm/prebuilt/linux-x86_64/bin/armv7a-linux-androideabi29-clang'
+rustflags = [
+    '-Clink-arg=-landroid',
+    '-Clink-arg=-llog',
+    '-Clink-arg=-lOpenSLES',
+]
+
+[target.i686-linux-android]
+#ar = '/usr/lib/android-sdk/ndk-bundle/toolchains/llvm/prebuilt/linux-x86_64/bin/i686-linux-android-ar'
+linker = '/usr/lib/android-sdk/ndk-bundle/toolchains/llvm/prebuilt/linux-x86_64/bin/i686-linux-android29-clang'
+rustflags = [
+    '-Clink-arg=-landroid',
+    '-Clink-arg=-llog',
+    '-Clink-arg=-lOpenSLES',
+]
+
+[target.x86_64-linux-android]
+ar = '/usr/lib/android-sdk/ndk-bundle/toolchains/llvm/prebuilt/linux-x86_64/bin/x86_64-linux-android-ar'
+linker = '/usr/lib/android-sdk/ndk-bundle/toolchains/llvm/prebuilt/linux-x86_64/bin/x86_64-linux-android24-clang'
+rustflags = [
+    '-Clink-arg=-landroid',
+    '-Clink-arg=-llog',
+    '-Clink-arg=-lOpenSLES',
+]
